crates/test-files/fixtures/compile_errors/cannot_move2.fe
contract Foo {
    pub fn foo() {
        let x: Array<u256, 10> = [0; 10]
        let y: Array<u256, 10> = [0; 10]
        let c: Array<u256, 20> = x + y
    }
}
